# comau_control

./: CMakeLists.txt  README.md  package.xml
cfg/: comau_pose.cfg
cfg/cpp/comau_control/: comau_poseConfig.h  haptic_parametersConfig.h
docs/: comau_poseConfig-usage.dox  comau_poseConfig.dox  comau_poseConfig.wikidoc  haptic_parametersConfig-usage.dox  haptic_parametersConfig.dox  haptic_parametersConfig.wikidoc
include/comau_control/: ComauIK.h  ComauTrajectoryServer.h  comau_poseConfig.h
launch/: comau_description.launch
msg/: unnecessary.msg
src/: comau_file_to_ik.cpp  comau_ik_service.cpp  comau_sensor_test.cpp  comau_ss_to_ik.cpp  comau_trajectory_follower.cpp  comau_trajectory_matlab.cpp  comau_trajectory_recorder.cpp  comau_workspace_reconfigure.cpp  comau_workspace_reconfigure.cpp.save  force_reader.cpp  kinematics_test.cpp  move_comau_to_target.cpp  testk.cpp  trail_rotation.cpp
src/comau_control/: ComauIK.cpp  ComauSmartSix.cpp  ComauTrajectoryServer.cpp
src/comau_control/cfg/: comau_poseConfig.py  haptic_parametersConfig.py
srv/: IKPoseReference.srv  IKService.srv  IKServiceTotal.srv
